# platform5-sdk-python

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml
examples/: basic.py
platform5/: __init__.py  client.py  errors.py  types.py
platform5/services/: account.py  email.py  messages.py  sms.py
tests/: test_client.py  test_errors.py  test_services.py
