[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform5-sdk"
version = "0.1.0"
description = "Python SDK for the Platform5 Developer API — send SMS, email, and more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nixoncode" }]
keywords = ["platform5", "sms", "email", "api", "sdk", "communications"]
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/nixoncode/platform5-sdk-python"
Repository = "https://github.com/nixoncode/platform5-sdk-python"
"Bug Tracker" = "https://github.com/nixoncode/platform5-sdk-python/issues"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["platform5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
